# odrivetest

install/: local_setup.sh  setup.sh
install/industrial_robot_jazzy/share/industrial_robot_jazzy/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/industrial_robot_jazzy/share/industrial_robot_jazzy/launch/: gazebo_simulation.launch.py  sime_robot.launch.py
install/industrial_robot_jazzy/share/industrial_robot_jazzy/urdf/: robot.urdf.xacro
install/industrial_robot_jazzy/share/industrial_robot_jazzy/urdf/install/: setup.bash
install/industrial_robot_jazzy/share/industrial_robot_jazzy/urdf/log/: latest_build
log/: latest_build
src/industrial_robot_jazzy/: CMakeLists.txt  package.xml
src/industrial_robot_jazzy/config/: controllers.yaml
src/industrial_robot_jazzy/launch/: gazebo_simulation.launch.py  simple_robot.launch.py
src/industrial_robot_jazzy/rviz/: view.rviz
src/industrial_robot_jazzy/scripts/: odrive_can.py  odrive_rviz_interface.py
src/industrial_robot_jazzy/src/: odrive_can_node.cpp  robot_controller.cpp
src/industrial_robot_jazzy/urdf/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
